--- a/notification-service/build.gradle
+++ b/notification-service/build.gradle
@@ -40,6 +40,7 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-actuator')
 	compile('org.springframework.cloud:spring-cloud-starter-bus-amqp')
 	compile('org.springframework.cloud:spring-cloud-netflix-hystrix-stream')
+	compile('org.springframework.boot:spring-boot-starter-mail')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	testCompile('de.flapdoodle.embed:de.flapdoodle.embed.mongo:1.50.2')
 	testCompile('com.jayway.jsonpath:json-path:2.1.0')
