docker and travis fixes

--- a/auth-service/Dockerfile
+++ b/auth-service/Dockerfile
@@ -1,5 +1,5 @@
 FROM java:8-jre
-MAINTAINER Alexander Lukyanchikov <sqshq@sqshq.com>
+MAINTAINER Anton Nikanorov <anton@antowka.ru>
 
 ADD ./target/auth-service.jar /app/
 CMD ["java", "-jar", "/app/auth-service.jar"]
