--- a/mongodb/Dockerfile
+++ b/mongodb/Dockerfile
@@ -1,5 +1,5 @@
 FROM mongo:3
-MAINTAINER Alexander Lukyanchikov <sqshq@sqshq.com>
+MAINTAINER Anton Nikanorov <anton@antowka.ru>
 
 ADD init.sh /init.sh
 ADD ./dump /
