--- a/gateway/Dockerfile
+++ b/gateway/Dockerfile
@@ -1,5 +1,5 @@
 FROM java:8-jre
-MAINTAINER Alexander Lukyanchikov <sqshq@sqshq.com>
+MAINTAINER Anton Nikanorov <anton@antowka.ru>
 
 ADD ./target/gateway.jar /app/
 CMD ["java", "-jar", "/app/gateway.jar"]
