--- a/statistics-service/Dockerfile
+++ b/statistics-service/Dockerfile
@@ -1,5 +1,5 @@
 FROM java:8-jre
-MAINTAINER Alexander Lukyanchikov <sqshq@sqshq.com>
+MAINTAINER Anton Nikanorov <anton@antowka.ru>
 
 ADD ./target/statistics-service.jar /app/
 CMD ["java", "-jar", "/app/statistics-service.jar"]
