--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,3 @@
-apply plugin: 'java'
-apply plugin: 'eclipse'
-apply plugin: 'spring-boot'
-
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
-
-repositories {
-    mavenCentral()
-    maven { url "https://repo.spring.io/snapshot" }
-    maven { url "https://repo.spring.io/milestone" }
-}
-
-task wrapper(type: Wrapper) {
-    gradleVersion = '2.12'
+allprojects {
+    task hello << { task -> println "I'm $task.project.name" }
 }
