--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,42 @@
+buildscript {
+    ext {
+        springBootVersion = '1.3.3.RELEASE'
+    }
+    repositories {
+        mavenCentral()
+        maven{url "http://repo.spring.io/snapshot"}
+        maven{url "http://repo.spring.io/milestone"}
+    }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+        classpath("io.spring.gradle:dependency-management-plugin:0.5.6.RELEASE")
+    }
+}
+
 allprojects {
-    task hello << { task -> println "I'm $task.project.name" }
+
+    repositories {
+        mavenCentral()
+        maven { url "https://repo.spring.io/snapshot" }
+        maven { url "https://repo.spring.io/milestone" }
+    }
+
+    task wrapper(type: Wrapper) {
+        gradleVersion = '2.12'
+    }
+}
+
+subprojects {
+
+    apply plugin: 'java'
+    apply plugin: 'eclipse'
+    apply plugin: 'spring-boot'
+    apply plugin: "io.spring.dependency-management"
+
+    eclipse {
+        classpath {
+            containers.remove('org.eclipse.jdt.launching.JRE_CONTAINER')
+            containers 'org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8'
+        }
+    }
 }
