fixes in gradle settings

--- a/account-service/build.gradle
+++ b/account-service/build.gradle
@@ -2,7 +2,15 @@ apply plugin: 'jacoco'
 
 jar {
 	baseName = 'account-service'
-	version = '0.0.1-SNAPSHOT'
+	version = appVersion
+}
+
+task copyTask(type: Copy) {
+	from 'build/libs'
+	into 'target'
+	include '*.jar'
+	exclude { details -> details.file.name.endsWith('.jar') &&
+			details.file.text.contains('staging') }
 }
 
 sourceCompatibility = 1.8
