--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,8 @@
 buildscript {
+
     ext {
         springBootVersion = '1.3.3.RELEASE'
+        appVersion = null
     }
     repositories {
         mavenCentral()
@@ -12,6 +14,8 @@ buildscript {
         classpath("io.spring.gradle:dependency-management-plugin:0.5.6.RELEASE")
     }
 }
+
+
 
 allprojects {
 
