--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -29,31 +29,33 @@ services:
     build: account-service
     ports:
       - 6000:6000
+    volume:
+      - /tmp:/var/log/java
 
   account-mongodb:
     build: mongodb
     ports:
       - 26000:27017
 
-  statistics-service:
-    build: statistics-service
-    ports:
-      - 7000:7000
+#  statistics-service:
+#    build: statistics-service
+#    ports:
+#      - 7000:7000
 
-  statistics-mongodb:
-    build: mongodb
-    ports:
-      - 27000:27017
+#  statistics-mongodb:
+#    build: mongodb
+#    ports:
+#      - 27000:27017
 
-  notification-service:
-    build: notification-service
-    ports:
-      - 8000:8000
+#  notification-service:
+#    build: notification-service
+#    ports:
+#      - 8000:8000
 
-  notification-mongodb:
-    build: mongodb
-    ports:
-      - 28000:27017
+#  notification-mongodb:
+#    build: mongodb
+#    ports:
+#      - 28000:27017
 
-  monitoring:
-    build: monitoring
+#  monitoring:
+#    build: monitoring
