--- a/registry/build.gradle
+++ b/registry/build.gradle
@@ -22,14 +22,14 @@ repositories {
 
 
 dependencies {
-	compile('org.springframework.cloud:spring-cloud-config-server')
 	compile('org.springframework.cloud:spring-cloud-starter-eureka-server')
-	compile('org.springframework.boot:spring-boot-starter-security')
+	compile('org.springframework.cloud:spring-cloud-starter-config')
 	testCompile('org.springframework.boot:spring-boot-starter-test') 
 }
 
 dependencyManagement {
 	imports { 
-		mavenBom "org.springframework.cloud:spring-cloud-dependencies:Brixton.RC1" 
+		mavenBom "org.springframework.cloud:spring-cloud-dependencies:Brixton.RC1"
+		mavenBom "org.springframework.boot:spring-boot-starter-parent:${springBootVersion}"
 	}
 }
